--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Project Template</title>
+    <title>Webpack | React Project Template</title>
+    <link rel="shortcut icon" type="image/svg" href="assets/webpack.svg" />
   </head>
   <body>
     <div id="root"></div>
